admissioncontroller.yaml
apiVersion: v1
kind: Service
metadata:
  name: environment-injector
  labels:
    app: environment-injector
spec:
  ports:
    - port: 443
      targetPort: 443
  selector:
    app: environment-injector   
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: environment-injector
  labels:
    app: environment-injector
spec:
  replicas: 1
  selector:
    matchLabels:
      app: environment-injector
  template:
    metadata:
      name: environment-injector
      labels:
        app: environment-injector
    spec:
      containers:
      - name: environment-injector
        image: anilkuscu95/environment-injector              
        imagePullPolicy: Always
        ports:
          - containerPort: 443                
        volumeMounts:
        - name: key
          mountPath: /app/mutateme.key
          subPath: mutateme.key
        - name: pem
          mountPath: /app/mutateme.pem
          subPath: mutateme.pem
      volumes:
      - name: key
        configMap:
          name: key
      - name: pem
        configMap:
          name: pem
---
  kind: ConfigMap
  apiVersion: v1
  metadata:
    name: key
    labels:
      app: environment-injector
  data:
    mutateme.key: |-

---
  kind: ConfigMap
  apiVersion: v1
  metadata:
    name: pem
    labels:
      app: environment-injector
  data:
    mutateme.pem: |-

---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: environment-injector
  labels:
    app: environment-injector
webhooks:
  - name: environment-injector.default.svc.cluster.local
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUN5RENDQWJDZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFWTVJNd0VRWURWUVFERXdwcmRXSmwKY201bGRHVnpNQjRYRFRFNU1EY3lOVEV4TkRjek9Gb1hEVEk1TURjeU1qRXhORGN6T0Zvd0ZURVRNQkVHQTFVRQpBeE1LYTNWaVpYSnVaWFJsY3pDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTHhzCk9Xay9OUE5jL2FMeFFiemZ3dnJlVGR3V3pXaU4rUlV2WTFLclRPWHB5WlBSaGMrUU8xc25ZQzdCWGtZTWNJVzAKaFVjLzRlR0Vtb3NGZjZpeTR5bzlUc3g4WW82dkxzazBHWktZay92dlJDcjVyL09wZUk2dFFOTTlMVFNkOXhXdgpFT0ZONDdsU2dF [...]
      service:
        name: environment-injector
        namespace: default
        path: '/mutate'
        port: 443
    rules:
      - operations: ['CREATE']
        apiGroups: ['']
        apiVersions: ['v1']
        resources: ['pods']
    sideEffects: None
    timeoutSeconds: 5
    reinvocationPolicy: Never
    failurePolicy: Ignore
    namespaceSelector:
      matchLabels:
        environment-injector: enabled
